decafexpr/output/dev/llvm/boolcall1.llvm.bc.err
/usr/local/Cellar/llvm38/3.8.0/lib/llvm-3.8/bin/llvm-as: /Users/Sei/SFU/CMPT379/DecafCompiler/decafexpr/output/dev/llvm/boolcall1.llvm:8:20: error: use of undefined value '%a'
  store i1 %0, i1* %a
                   ^
